trunk/Archive2/13/67f826f56e2fe7/output
main.cpp:1:1: error: 'sum' does not name a type
 sum=0;
 ^
main.cpp:2:1: error: expected unqualified-id before 'for'
 for(count=0;count<50;count=count+1)
 ^
main.cpp:2:13: error: 'count' does not name a type
 for(count=0;count<50;count=count+1)
             ^
main.cpp:2:22: error: 'count' does not name a type
 for(count=0;count<50;count=count+1)
                      ^
